# life-of-a-monster

./: Cargo.toml
assets/texture/: entities.ron  tiles.ron
config/: display.ron
src/: main.rs
src/resources/: dungeon.rs  hero.rs  mod.rs  tiles.rs
src/states/: gameplay.rs  loading.rs  mod.rs
src/systems/: fighting.rs  hero_movement.rs  mod.rs  progression.rs
