[package]
name = "life-of-a-monster"
version = "0.1.0"
authors = ["Jaden Giordano <thejadenjack@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", features = ["tiles"] }
derive-new = "0.5.8"

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
